The bmesh.ops.symmetrize python interface does not support the "positive" variants of symmetry direction #59804

Closed
opened 2018-12-24 01:25:57 +01:00 by Jesse Yurkovich · 9 comments

System Information
Operating system: Win10
Graphics card: nVidia 1070

Blender Version
Broken: 2.80 dafaa6f228
Worked: never?

Short description of error
The bmesh.ops.symmetrize python interface only supports direct 'X', 'Y', or 'Z' axis direction values. However, the code itself actually supports all 6 variants as evidenced by the native MESH_OT_symmetrize operator passing an integer in for the "direction" property based on the BMO_SymmDirection enum.

Exact steps for others to reproduce the error

  • Attempt to use bmesh.ops.symmetrize from the python console
  • Notice you cannot chose anything other than what amounts to BMO_SYMMETRIZE_NEGATIVE_X, BMO_SYMMETRIZE_NEGATIVE_Y, and BMO_SYMMETRIZE_NEGATIVE_Z
**System Information** Operating system: Win10 Graphics card: nVidia 1070 **Blender Version** Broken: 2.80 dafaa6f2288 Worked: never? **Short description of error** The bmesh.ops.symmetrize python interface only supports direct 'X', 'Y', or 'Z' axis direction values. However, the code itself actually supports all 6 variants as evidenced by the native MESH_OT_symmetrize operator passing an integer in for the "direction" property based on the BMO_SymmDirection enum. **Exact steps for others to reproduce the error** * Attempt to use bmesh.ops.symmetrize from the python console * Notice you cannot chose anything other than what amounts to BMO_SYMMETRIZE_NEGATIVE_X, BMO_SYMMETRIZE_NEGATIVE_Y, and BMO_SYMMETRIZE_NEGATIVE_Z
Author
Member

Added subscriber: @deadpin

Added subscriber: @deadpin

Added subscribers: @ideasman42, @ZedDB

Added subscribers: @ideasman42, @ZedDB

@ideasman42 any reason for it being like this?

@ideasman42 any reason for it being like this?
Author
Member

Noticed this was marked as needing more information from the user. Is there anything else you'd like me to add?

Noticed this was marked as needing more information from the user. Is there anything else you'd like me to add?
Campbell Barton was assigned by Sebastian Parborg 2019-03-10 09:21:53 +01:00

Nope, no more information needed.

Nope, no more information needed.
Campbell Barton was unassigned by Dalai Felinto 2019-12-23 16:35:32 +01:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Can I confirm. The symmetrize bmesh operator has more direction options than those exposed in python.

Can I confirm. The `symmetrize` bmesh operator has more `direction` options than those exposed in python.

This issue was referenced by 2662ba2438

This issue was referenced by 2662ba24380471be0972fcaa545995c1514dbc24

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-01-27 17:02:14 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59804
No description provided.