Fix T59804: Expose hidden bmesh.ops.symmetrize options in python

The operator actually supports a 6-item enum

Differential Revision: https://developer.blender.org/D6613